# ocaml-build-examples

./: .gitignore  .gitmodules  .z3-trace  Makefile  Makefile.bin.mk  Makefile.weird.mk  README.md  README.z3.md  bug_script.ml  callgraph.d  dune  dune-project  m1.ml  z1.ml
cpp_template/: funs.cpp  main
docs/: Trace_.code-search  pyq.code-search
gh-pages/: index.html
opam-playground/: Makefile
opam-playground/conf-python-3.distro/: opam
opam-playground/conf-z3/: opam
smt_files/: api_get_info.smt2  api_get_info_datatype.smt2  dummy.smt2  tactic.smt2
topic-cpp-template/: Makefile  funs.cpp
topic-z3/: Makefile  README.trace.md  README.z3.md  dune
topic-z3/smt_files/: api_get_info.smt2  bad_half.smt2  horn.smt2  tactic.smt2.result
topic-z3/via_dune/sudu/: bugcase.ml
topic-z3/via_terminal/: z1.ml
topic-z3/z3-play-to-be-merge/: .gitignore  Makefile
via_dune/sudu/: README.md  dune
via_dune/sudu/test/: dune
weird_case/: dummy.smt2
